@@ -1,6 +1,7 @@
 Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
+    - fix list_domain_applications for Orchestrator version 9.3+
 
 0.015000  2024-08-16 09:37:50+02:00 Europe/Vienna
     - add get_appliance_bgp_system_config_allvrfs
